--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
 *{
     border: 0;
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: lightblue;
     text-align: center;
 }
+
